# nasp_atlas

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  query.py
.github/workflows/: ci.yml
development/: plot_combined_clock_regressions.py
nasp_atlas/: common.py  query.py
nasp_atlas/analysis/: __init__.py  clock.py  tabula_sapiens.py
nasp_atlas/cellxgene/: README.md  __init__.py  categorize.py  config.py  filter.py  metadata.py  query.py
nasp_atlas/cellxgene/configs/: category_schema.yaml
nasp_atlas/cellxgene/visualization/: age.py  composition.py  sankey.py
nasp_atlas/single_cell/: __init__.py  config.py  io.py  metacells.py  module_scoring.py  scprocessor.py  scutils.py  utils.py  visualization.py
nasp_atlas/single_cell/clocks/: __init__.py  model.py  preprocess.py
nasp_atlas/visualization/: __init__.py
nasp_atlas/visualization/cellxgene/: metadata.py
notebooks/: tabula_sapiens.ipynb
tests/: clock_test.py  single_cell_test.py  tabula_sapiens_analysis_test.py
