[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasp_atlas"
version = "0.1.0"
description = "Curation and analyses of NASP in publicly-available single-cell atlases."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
]

dependencies = [
  "anndata==0.12.6",
  "cellxgene_census==1.17.0",
  "h5py==3.16.0",
  "matplotlib==3.10.9",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "plotly==6.7.0",
  "pyscenic==0.12.1",
  "PyYAML==6.0.3",
  "scanpy==1.11.5",
  "scipy==1.17.1",
  "seaborn==0.13.2",
  "setuptools<81",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.17",
  "pyright[nodejs]==1.1.410",
  "pytest==9.1.0",
  "pytest-cov",
  "ipython==8.12.3",
  "ipykernel==7.3.0",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/sciencesteveho/nasp_atlas"
Source = "https://github.com/sciencesteveho/nasp_atlas"
Issues = "https://github.com/sciencesteveho/nasp_atlas/issues"

[tool.coverage.run]
source = ["nasp_atlas"]
omit = [
  "tests/**",
  "**/*_test.py",
  "**/test_*.py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nasp_atlas*"]
namespaces = true

[tool.setuptools.package-data]
"nasp_atlas.cellxgene.configs" = ["*.yaml"]

[tool.ruff]
src = ["nasp_atlas", "tests"]
extend-include = [ "*.ipynb" ]
target-version = "py311"
line-length = 80
indent-width = 4

exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
  "*.egg-info",
]

[tool.ruff.lint]
select = [
  "F",    # Pyflakes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "I",    # isort-compatible import sorting
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "RUF",  # Ruff-specific rules
  "C4",     # flake8-comprehensions
  "BLE",    # flake8-blind-except
  "RUF100", # unused noqa
  "D",   # pydocstyle
]

ignore = [
  "D413",  # Missing blank line after last section.
  "D205",  # 1 blank line required before class docstring.
]

# Warn about unused imports, but do not auto-delete on save.
unfixable = [
  "F401",
]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["nasp_atlas"]

force-single-line = true
single-line-exclusions = ["typing", "collections.abc"]
combine-as-imports = true
split-on-trailing-comma = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401",  # Allow public re-exports.
]

"*_test.py" = [
  "E402",  # Allow test-local imports after setup when needed.
]

"tests/**/*.py" = [
  "E402",
]

"scripts/**/*.py" = [
  "E402",  # Useful for scripts with path/bootstrap setup.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
  "nasp_atlas",
]

exclude = [
  "**/node_modules",
  "**/.*",
  "build",
  "dist",
  "**/*.egg-info",
  "**/__pycache__",
  "**/*.pyc",
  "venv",
  "notebooks",
]

reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

python_files = [
  "*_test.py",
  "test_*.py",
]

addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
]
